display error messages

--- a/app/views/task_block/tasks/new.html.erb
+++ b/app/views/task_block/tasks/new.html.erb
@@ -7,10 +7,26 @@
 </head>
 <body>
   <%= form_with scope: :task, url: task_block_tasks_path, local: true do |f| %>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %><br><br>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %><br><br>
+    <div>
+      <b><%= f.label :title %></b><br>
+      <%= f.text_field :title %><br>
+      <% if flash[:errors] && flash[:errors]["title"] %>
+        <% flash[:errors]["title"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
+    <div>
+      <b><%= f.label :description %></b><br>
+      <%= f.text_field :description %><br>
+      <% if flash[:errors] && flash[:errors]["description"] %>
+        <% flash[:errors]["description"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
     <%= f.submit "Create New Task" %><br><br>
   <% end %>
 </body>
