--- a/app/views/account_block/accounts/new.html.erb
+++ b/app/views/account_block/accounts/new.html.erb
@@ -7,16 +7,56 @@
 </head>
 <body>
   <%= form_with scope: :account, url: account_block_accounts_path, local: true do |f| %>
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %><br><br>
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %><br><br>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %><br><br>
-    <%= f.label :phone_number %><br>
-    <%= f.text_field :phone_number %><br><br>
-    <%= f.label :password %><br>
-    <%= f.password_field :password %><br><br>
+    <div>
+      <b><%= f.label :first_name %><br></b>
+      <%= f.text_field :first_name %><br>
+      <% if flash[:errors] && flash[:errors]["first_name"] %>
+        <% flash[:errors]["first_name"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
+    <div>
+      <b><%= f.label :last_name %><br></b>
+      <%= f.text_field :last_name %><br>
+      <% if flash[:errors] && flash[:errors]["last_name"] %>
+        <% flash[:errors]["last_name"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
+    <div>
+      <b><%= f.label :email %><br></b>
+      <%= f.text_field :email %><br>
+      <% if flash[:errors] && flash[:errors]["email"] %>
+        <% flash[:errors]["email"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
+    <div>
+      <b><%= f.label :phone_number %><br></b>
+      <%= f.text_field :phone_number %><br>
+      <% if flash[:errors] && flash[:errors]["phone_number"] %>
+        <% flash[:errors]["phone_number"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
+    <div>
+      <b><%= f.label :password %><br></b>
+      <%= f.password_field :password %><br>
+      <% if flash[:errors] && flash[:errors]["password"] %>
+        <% flash[:errors]["password"].each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      <% end %>
+    </div>
+    <br>
     <%= f.submit "Sign Up!" %><br><br>
   <% end %>
   <%= link_to "Sign in", new_account_block_login_path %>
