--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,30 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg sticky-top mb-4" style="background-color: #867ae3;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ToDo Bot</a>
+    <a class="navbar-brand" href=<%= root_path %> ><b>ToDo Bot</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href=<%= root_path %> >Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Task</a>
+      </ul>
+    </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <% if @current_user %>
+          <li class="nav-item">
+            <a class="nav-link active text-capitalize" href="#"><b>User: <%= @current_user.first_name+" "+@current_user.last_name%></b></a>
+          </li>
+          <li class="nav-item">
+            <a <button class="btn btn-outline-dark my-2 my-sm-0" href= <%= end_session_account_block_logins_path %> > SignOut</button> </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
+        <% else %>
+          <li class="nav-item">
+            <a <button class="btn btn-outline-success my-2 my-sm-0" href= <%= new_account_block_login_path %> > SignIn</button> </a>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
