--- a/app/views/task_block/tasks/_form.html.erb
+++ b/app/views/task_block/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <form accept-charset="UTF-8" action="/task_block/tasks" method="post">
   <div class="mb-3">
     <label class="form-label" for="title"><b>Title</b></label>
-    <input class="form-control" id="title" name="task[title]" type="text" value= <%= @task&.title %> >
+    <input class="form-control" id="title" name="task[title]" type="text">
     <% if flash[:errors] && flash[:errors]["title"] %>
       <% flash[:errors]["title"].each do |message| %>
         <div><%= message %></div>
@@ -10,7 +10,7 @@
   </div>
   <div class="mb-3">
     <label class="form-label" for="description"><b>Description</b></label>
-    <input class="form-control" id="description" name="task[description]" type="text" value= <%= @task&.description %> >
+    <input class="form-control" id="description" name="task[description]" type="text">
     <% if flash[:errors] && flash[:errors]["description"] %>
       <% flash[:errors]["description"].each do |message| %>
         <div><%= message %></div>
