--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,16 +1,18 @@
-<nav class="navbar navbar-expand-lg sticky-top mb-4" style="background-color: #867ae3;">
+<nav class="navbar navbar-expand-lg" style="background-color: #d4574e;">
   <div class="container-fluid">
     <a class="navbar-brand" href=<%= root_path %> ><b>ToDo Bot</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href=<%= root_path %> >Home</a>
-        </li>
-      </ul>
-    </div>
+    <% if @current_user %>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href=<%= root_path %> >Home</a>
+          </li>
+        </ul>
+      </div>
+    <% end %>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <% if @current_user %>
