--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
-    <div class="container">
-      <%= yield %>
+    <div id="mainContainer">
+      <div id="header">
+        <%= render "layouts/navbar" %>
+      </div>
+      <div id="main">
+        <%= yield %>
+      </div>
     </div>
-    <%= render "layouts/footer" %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
   </body>
 </html>
