--- a/app/views/task_block/tasks/new.html.erb
+++ b/app/views/task_block/tasks/new.html.erb
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CreateTask</title>
-</head>
-<body>
-  <%= render "form" %>
-  <br>
-  <%= link_to "Back to Home", root_path %>
-</body>
-</html>
+<section class="mt-3"
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Create a Task</h2>
+              <form accept-charset="UTF-8" action="/task_block/tasks" method="post">
+                <div class="mb-3">
+                  <label class="form-label" for="title"><b>Title</b></label>
+                  <input class="form-control" id="title" name="task[title]" type="text">
+                  <% if flash[:errors] && flash[:errors]["title"] %>
+                    <% flash[:errors]["title"].each do |message| %>
+                      <div><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label" for="description"><b>Description</b></label>
+                  <input class="form-control" id="description" name="task[description]" type="text" rows="5">
+                  <% if flash[:errors] && flash[:errors]["description"] %>
+                    <% flash[:errors]["description"].each do |message| %>
+                      <div><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+                <input class="btn btn-secondary" data-disable-with="Log In" name="commit" type="submit" value="Create New Task">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
