--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,18 +13,34 @@
  *= require_tree .
  *= require_self
  */
+ #mainContainer {
+  width: 70%;
+  margin-left: 15%;
+ }
 
  #main {
-  margin-left: 20%;
-  width: 60%;
-  height: 740px;
+  height: 780px;
  }
 
  .contact-table-scroll{
   overflow-y: scroll;
-  height: 660px;
+  height: 330px;
  }
 
- th, td {
-  text-align: center;
+ .icon {
+  color: grey;
+  margin-top: 10px;
+  margin-left: 2px;
+ }
+
+ .side-bar-items {
+  margin-top: 10px;
+  width: 20px;
+  height: 25px;
+ }
+
+ a {
+  text-decoration: none;
+  margin-top: 8px;
+  font-size: large;
  }
