--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,23 @@
   </head>
 
   <body>
-    <div id="mainContainer">
+    <div class="mt-2 rounded border border-1" id="mainContainer">
       <div id="header">
         <%= render "layouts/navbar" %>
       </div>
       <div id="main">
-        <%= yield %>
+        <% if @current_user %>
+          <div class="row mx-auto justify-content-around">
+            <div class="col-sm-2">
+              <%= render "layouts/sidebar" %>
+            </div>
+            <div class="col-sm-10">
+              <%= yield %>
+            </div>
+          </div>
+        <% else %>
+          <%= yield %>
+        <% end %>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
