--- a/app/views/task_block/tasks/_form.html.erb
+++ b/app/views/task_block/tasks/_form.html.erb
@@ -1,36 +1,30 @@
-<section class="mt-3"
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Create a Task</h2>
-              <form accept-charset="UTF-8" action="/task_block/tasks" method="post">
-                <div class="mb-3">
-                  <label class="form-label" for="title"><b>Title</b></label>
-                  <input class="form-control" id="title" name="task[title]" type="text">
-                  <% if flash[:errors] && flash[:errors]["title"] %>
-                    <% flash[:errors]["title"].each do |message| %>
-                      <div><%= message %></div>
-                    <% end %>
-                  <% end %>
-                </div>
-                <div class="mb-3">
-                  <label class="form-label" for="description"><b>Description</b></label>
-                  <input class="form-control" id="description" name="task[description]" type="text">
-                  <% if flash[:errors] && flash[:errors]["description"] %>
-                    <% flash[:errors]["description"].each do |message| %>
-                      <div><%= message %></div>
-                    <% end %>
-                  <% end %>
-                </div>
-                <input class="btn btn-secondary" data-disable-with="Log In" name="commit" type="submit" value="Create New Task">
-              </form>
-            </div>
-          </div>
+<section class="mt-3 rounded border border-2" id="newTask">
+  <div class="row justify-content-md-center">
+    <div class="col-6 mt-3">
+      <h2>Create New Task</h2>
+      <%= form_with scope: :task, url: "/task_block/tasks", method: :post do |f| %>
+        <div class="mt-3">
+          <b><%= f.label :title, class: "form-label" %></b>
+          <%= f.text_field :title, id: :title, class: "form-control" %>
+          <% if flash[:errors] && flash[:errors]["title"] %>
+            <% flash[:errors]["title"].each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          <% end %>
         </div>
-      </div>
+        <div class="mt-3">
+          <b><%= f.label :description, class: "form-label" %></b>
+          <%= f.text_area :description, id: :description, size:"50x5", class: "form-control" %>
+          <% if flash[:errors] && flash[:errors]["description"] %>
+            <% flash[:errors]["description"].each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="mt-3">
+          <%= f.submit "Create Task", class: "btn btn-default btn-primary" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </section>
