--- a/app/views/task_block/tasks/edit.html.erb
+++ b/app/views/task_block/tasks/edit.html.erb
@@ -1,47 +1,41 @@
-<section class="mt-3"
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Update</h2>
-              <%= form_with scope: :task, url: "/task_block/tasks/#{@task.id}", method: :patch do |f| %>
-                <div class="mb-3">
-                  <b><%= f.label :title, class: "form-label" %></b>
-                  <%= f.text_field :title, class: "form-control"%>
-                  <% if flash[:errors] && flash[:errors]["title"] %>
-                  <% flash[:errors]["title"].each do |message| %>
-                    <div><%= message %></div>
-                  <% end %>
-                <% end %>
-                </div>
-                <div class="mb-3">
-                  <b><%= f.label :description, class: "form-label" %></b>
-                  <%= f.text_field :description, class: "form-control"%>
-                  <% if flash[:errors] && flash[:errors]["description"] %>
-                  <% flash[:errors]["description"].each do |message| %>
-                    <div><%= message %></div>
-                  <% end %>
-                <% end %>
-                </div>
-                <div class="mb-3">
-                  <label class="form-label"><b>Status</b></label>
-                  <div class="form-check">
-                    <%= f.radio_button :status, "pending" %>
-                    <%= f.label :pending, "Pending" %>
-                  </div>
-                  <div class="form-check">
-                    <%= f.radio_button :status, "completed" %>
-                    <%= f.label :completed, "Completed" %>
-                  </div>
-                </div>
-                <input class="btn btn-secondary" data-disable-with="Sign Up" name="commit" type="submit" value="Update Task">
-              <% end %>
-            </div>
+<section class="mt-3 rounded border border-2" id="newTask">
+  <div class="row justify-content-md-center">
+    <div class="col-6 mt-3">
+      <h2>Update Task</h2>
+      <%= form_with scope: :task, url: "/task_block/tasks/#{@task.id}", method: :patch do |f| %>
+        <div class="mt-3">
+          <b><%= f.label :title, class: "form-label" %></b>
+          <%= f.text_field :title, class: "form-control"%>
+          <% if flash[:errors] && flash[:errors]["title"] %>
+            <% flash[:errors]["title"].each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="mt-3">
+          <b><%= f.label :description, class: "form-label" %></b>
+          <%= f.text_area :description, size:"50x5", class: "form-control"%>
+          <% if flash[:errors] && flash[:errors]["description"] %>
+            <% flash[:errors]["description"].each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="mt-3">
+          <label class="form-label"><b>Status</b></label>
+          <div class="form-check">
+            <%= f.radio_button :status, "pending" %>
+            <%= f.label :pending, "Pending" %>
+          </div>
+          <div class="form-check">
+            <%= f.radio_button :status, "completed" %>
+            <%= f.label :completed, "Completed" %>
           </div>
         </div>
-      </div>
+        <div class="mt-3">
+          <%= f.submit "Update Task", class: "btn btn-default btn-primary" %>
+        </div>
+        <% end %>
     </div>
   </div>
 </section>
