--- a/app/views/task_block/tasks/edit.html.erb
+++ b/app/views/task_block/tasks/edit.html.erb
@@ -22,15 +22,34 @@
           <% end %>
         </div>
         <div class="mt-3">
-          <label class="form-label"><b>Status</b></label>
-          <div class="form-check">
+          <label class="form-label"><b>Status</b></label><br>
+          <span>
             <%= f.radio_button :status, "pending" %>
             <%= f.label :pending, "Pending" %>
-          </div>
-          <div class="form-check">
+          </span>
+          <span class="ms-3">
             <%= f.radio_button :status, "completed" %>
             <%= f.label :completed, "Completed" %>
-          </div>
+          </span>
+        </div>
+        <div class="mt-3">
+          <label class="form-label"><b>Priority</b></label><br>
+          <span>
+            <%= f.radio_button :priority, "high" %>
+            <%= f.label :high, "High" %>
+          </span>
+          <span class="ms-3">
+            <%= f.radio_button :priority, "medium" %>
+            <%= f.label :medium, "Medium" %>
+          </span>
+          <span class="ms-3">
+            <%= f.radio_button :priority, "low" %>
+            <%= f.label :low, "Low" %>
+          </span>
+        </div>
+        <div class="mt-3">
+          <b><%= f.label :planned_date, "Planned Date", class: "form-label" %></b><br>
+          <%= f.date_field :planned_date, class: "rounded border border-1" %>
         </div>
         <div class="mt-3">
           <%= f.submit "Update Task", class: "btn btn-default btn-primary" %>
