--- a/app/views/task_block/tasks/pending_tasks.html.erb
+++ b/app/views/task_block/tasks/pending_tasks.html.erb
@@ -24,9 +24,21 @@
               >
               <label class="form-check-label" for="task_<%= task.id %>"></label>
             </div>
-            <div class="d-flex flex-row rounded border border-2 mt-2 w-75 ms-3" style="height: 55px; background-color: rgba(0,0,255,.1)">
+            <div class="d-flex flex-row rounded border border-2 mt-2 ms-3" style="width: 92%; height: 55px; background-color: rgba(240,240,240)">
               <div class="d-flex flex-column w-75">
-                <div class="ps-2 h6" style="font-size: 20px;"><%= task.title%></div>
+                <div class="d-flex flex-row">
+                  <div class="ps-2 h6" style="font-size: 20px;"><%= task.title%></div>
+                  <% priority = task.priority %>
+                  <% if priority %>
+                    <% if priority == "high" %>
+                      <span class="badge text-danger ms-3">High</span>
+                    <% elsif priority == "medium" %>
+                      <span class="badge text-warning ms-3">Medium</span>
+                    <% elsif priority == "low" %>
+                      <span class="badge text-success ms-3">Low</span>
+                    <% end %>
+                  <% end %>
+                </div>
                 <div class="ps-2" style="font-size: 15px;"><%= task.description%></div>
               </div>
               <div class="mt-2 ms-5">
