--- a/app/views/task_block/tasks/today_tasks.html.erb
+++ b/app/views/task_block/tasks/today_tasks.html.erb
@@ -12,7 +12,7 @@
         <h4>Pending Task List :</h3>
       </div>
     </div>
-    <% @task_list = @pending_tasks %>
+    <% @task_list = @today_tasks %>
     <%= render "tasks" %>
   </div>
 </div>
