implemented drag and drop re-order for pending tasks

--- a/app/views/task_block/tasks/_tasks.html.erb
+++ b/app/views/task_block/tasks/_tasks.html.erb
@@ -1,6 +1,10 @@
 <div class="d-flex flex-column rounded border border-1">
   <div class="trashed-table-scroll">
-    <% @task_list.each do |task| %>
+    <table style="width: 100%;">
+    <tbody class="sortable">
+    <% @task_list.each do |task, sortable_id| %>
+      <tr id="<%= task.sortable_id %>">
+      <td>
       <div class="d-flex flex-row" id="task_row_<%= task.id %>">
         <div class="form-check mt-3 ms-3">
           <input type="checkbox" class="form-check-input task-select-check" 
@@ -46,6 +50,10 @@
           </div>
         </div>
       </div>
+      </td>
+      </tr>
     <% end %>
+    </tbody>
+    </table>
   </div>
 </div>
