--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,46 +1,37 @@
-<nav class="navbar navbar-expand-lg border rounded bg-secondary">
+<nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand text-white" href=<%= root_path %> ><b>ToDo Bot</b></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <%= link_to root_path, class:'navbar-brand border rounded text-light text-wrap fw-bold', style: "background: rgb(220, 53, 69);" do %>
+      <i class="bi bi-check2-square ms-1" style="font-size: 25px; background: rgb(220, 53, 69);"></i>
+      <span class='ms-1 me-2'>ToDo Bot</span>
+    <% end %>
     <% if @current_user %>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href=<%= root_path %> >Home</a>
-          </li>
-        </ul>
+      <div class="d-flex flex-row">
+        <div class="p-2">
+          <%= link_to notification_task_block_tasks_path, class:'text-decoration-none' do %>
+            <span class='fw-bold' style="color: rgb(220, 53, 69);">
+              <i class="bi bi-bell" style="font-size: 25px;"></i>
+              <small>
+                <% if @current_user.notifications.where(is_read: false).present? %>
+                  <%= @current_user.notifications.where(is_read: false).count %>
+                <% end %>
+              </small>
+            </span>
+          <% end %>
+        </div>
+        <div class="p-2">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle fw-bold text-capitalize" style="background: rgb(220, 53, 69)"; type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= image_tag "dummy_profile.jpeg", style: "width: 30px; border-radius: 50%; border: 2px solid #0d6efd;"%>
+              <%= @current_user.first_name+" "+@current_user.last_name %>
+            </button>
+            <ul class="dropdown-menu" style="background: rgb(220, 53, 69)";>
+              <li>
+                <%= link_to "Sign Out", end_session_account_block_logins_path, class: 'dropdown-item fw-bold' %>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     <% end %>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <% if @current_user %>
-          <li class="nav-item">
-            <a class="nav-link active text-capitalize text-white" href="#"><b>User: <%= @current_user.first_name+" "+@current_user.last_name%></b></a>
-          </li>
-          <li class="nav-item mt-2 me-5">
-            <a href= <%= notification_task_block_tasks_path %> >
-              <% if @current_user.notifications.where(is_read: false).present? %>
-                <span class="icon text-warning">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
-                    <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
-                  </svg>
-                </span>
-              <% else %>
-                <span class="icon text-light">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
-                    <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
-                  </svg>
-                </span>
-              <% end %>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a <button class="btn btn-outline-danger text-white border border-white" href= <%= end_session_account_block_logins_path %> > SignOut</button> </a>
-          </li>
-        <% end %>
-      </ul>
-    </div>
   </div>
 </nav>
