--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,71 +1,34 @@
-<div class="row mt-3 ms-2" >
-  <a href= <%= new_task_block_task_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Add Task</span>
-  </a>
-  <a href="">
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Search</span>
-  </a>
-  <a href= <%= pending_tasks_task_block_tasks_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-inbox" viewBox="0 0 16 16">
-        <path d="M4.98 4a.5.5 0 0 0-.39.188L1.54 8H6a.5.5 0 0 1 .5.5 1.5 1.5 0 1 0 3 0A.5.5 0 0 1 10 8h4.46l-3.05-3.812A.5.5 0 0 0 11.02 4H4.98zm9.954 5H10.45a2.5 2.5 0 0 1-4.9 0H1.066l.32 2.562a.5.5 0 0 0 .497.438h12.234a.5.5 0 0 0 .496-.438L14.933 9zM3.809 3.563A1.5 1.5 0 0 1 4.981 3h6.038a1.5 1.5 0 0 1 1.172.563l3.7 4.625a.5.5 0 0 1 .105.374l-.39 3.124A1.5 1.5 0 0 1 14.117 13H1.883a1.5 1.5 0 0 1-1.489-1.314l-.39-3.124a.5.5 0 0 1 .106-.374l3.7-4.625z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Pending</span>
-  </a>
-  <a href= <%= completed_tasks_task_block_tasks_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="23" fill="currentColor" class="bi bi-journal-check" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M10.854 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-        <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"/>
-        <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Completed</span>
-  </a>
-  <a href= <%= today_tasks_task_block_tasks_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-calendar-day" viewBox="0 0 16 16">
-        <path d="M4.684 11.523v-2.3h2.261v-.61H4.684V6.801h2.464v-.61H4v5.332h.684zm3.296 0h.676V8.98c0-.554.227-1.007.953-1.007.125 0 .258.004.329.015v-.613a1.806 1.806 0 0 0-.254-.02c-.582 0-.891.32-1.012.567h-.02v-.504H7.98v4.105zm2.805-5.093c0 .238.192.425.43.425a.428.428 0 1 0 0-.855.426.426 0 0 0-.43.43zm.094 5.093h.672V7.418h-.672v4.105z"/>
-        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Today</span>
-  </a>
-  <a href= <%= upcoming_tasks_task_block_tasks_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
-        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Upcoming</span>
-  </a>
-  <a href="">
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
-        <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Filters</span>
-  </a>
-  <a href= <%= trashed_tasks_task_block_tasks_path %> >
-    <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
-        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-      </svg>
-    </span>
-    <span class="ms-2">Trash</span>
-  </a>
+<div class="list-group">
+  <%= link_to new_task_block_task_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-plus-circle"></i>
+    Add task
+  <% end %>
+  <%= link_to "#", class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-search"></i>
+    Search
+  <% end %>
+  <%= link_to pending_tasks_task_block_tasks_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-inbox"></i>
+    Pending
+  <% end %>
+  <%= link_to completed_tasks_task_block_tasks_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-journal-check"></i>
+    Completed
+  <% end %>
+  <%= link_to today_tasks_task_block_tasks_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-calendar-day"></i>
+    Today
+  <% end %>
+  <%= link_to upcoming_tasks_task_block_tasks_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-calendar"></i>
+    Upcoming
+  <% end %>
+  <%= link_to "#", class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-funnel"></i>
+    Filters
+  <% end %>
+  <%= link_to trashed_tasks_task_block_tasks_path, class:'list-group-item list-group-item-action list-group-item-light', style: "font-size: 17px; color: rgb(220, 53, 69);" do %>
+    <i class="bi bi-trash"></i>
+    Trash
+  <% end %>
 </div>
