--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,30 @@
   </head>
 
   <body>
-    <div class="mt-2 rounded border border-1" id="mainContainer">
-      <div id="header">
-        <%= render "layouts/navbar" %>
-      </div>
-      <div id="main">
-        <% if @current_user %>
-          <div class="row mx-auto justify-content-around">
-            <div class="col-sm-2">
-              <%= render "layouts/sidebar" %>
+    <div class="container-fluid">
+      <div class='row'>
+        <div class='col-lg-10 mx-auto'>
+          <div class='card'>
+            <div class="card-header">
+              <%= render "layouts/navbar" %>  
             </div>
-            <div class="col-sm-10">
-              <%= yield %>
+            <div class="card-body" style="min-height:750px">
+              <% if @current_user %>
+                <div class="row mx-auto justify-content-around">
+                  <div class="col-lg-2">
+                    <%= render "layouts/sidebar" %>
+                  </div>
+                  <div class="col-lg-10">
+                    <%= yield %>
+                  </div>
+                </div>
+              <% else %>
+                <%= yield %>
+              <% end %>
             </div>
           </div>
-        <% else %>
-          <%= yield %>
-        <% end %>
+        </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
   </body>
 </html>
